storage: updated SegmentLoader & SegmentFactoryImpl to use ImmutableLists. SegmentManagerImpl updated accordingly